--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <body>
     <div class="stars"></div>
     <div class="navbar">
-        <img src="images/Jannat-logo1.png" class="logo">
+        <img src="D:\main memory\Screenshots\Jannat-logo1.png" class="logo">
         <ul>
             <li><a class="nav-link" href="#about">About</a></li>
             <li><a class="nav-link" href="#projects">Projects</a></li>
@@ -215,7 +215,7 @@
     <div class="about" id="about">
         <h1>About Me</h1>
         <div class="photo-container">
-            <img src="images/WhatsApp_Image .jpg" class="j1 full-photo">
+            <img src="D:\main memory\Screenshots\WhatsApp_Image .jpg" class="j1 full-photo">
         </div>
         <p>Hey! I'm Jannat Bhengray, a seasoned data enthusiast passionate about unraveling insights from complex datasets. Armed with expertise in Excel, Forecasting, SQL (Silver badge on HackerRank), Python (Pandas), and Power BI (including DAX functions), I thrive on transforming raw data into actionable strategies.</p>
         <p>My journey includes 3 impactful projects demonstrating my versatile skill set, alongside 2 enriching internships in data analytics and marketing. At Rawcult, a dynamic startup, I've contributed my skillset to drive data-driven decisions, amplifying productivity and results. From prompt engineering to leveraging Excel with ChatGPT, I'm all about maximizing efficiency and delivering tangible outcomes.</p>
@@ -254,27 +254,35 @@
     
     <section class="projects" id="projects">
         <h1 class="text-center">Projects</h1>
-        <div class="row">
-            <div class="col">
-                <img src="images/Screenshot(419).png" alt="World Championship Analysis Report">
+        <div class="jack">
+            <div class="sparrow">
+                <img src="D:\main memory\Screenshots\Screenshot(419).png" alt="World Championship Analysis Report">
                 <div class="card-text">
                     <h3>World Championship (1940-2023) Analysis</h3>
                     <p>Explore the "World Championship Analysis Report," where AI and Excel clean and visualize sports data with Power BI. Uncover key trends in country performance and gender-specific winners, providing insights into global championship successes.</p>
                     <a href="https://www.linkedin.com/posts/jannat-bhengray_dataabranalytics-powerbi-excelabrwithabrgpt-activity-7208468545871974400-oMA8?utm_source=share&utm_medium=member_desktop" class="blog-button">Blog</a>
                 </div>
             </div>
-            <div class="col">
-                <img src="images/Screenshot(420).png" alt="National Health Measure Analysis">
+            <div class="sparrow">
+                <img src="D:\main memory\Screenshots\Screenshot (477).png" alt="Maven Hospital Analysis Report">
+                <div class="card-text">
+                    <h3>Maven Hospital Analysis</h3>
+                    <p>Explore critical trends in patient admissions, insurance coverage, and demographics. Key insights include a peak in 2014 admissions, Medicaid's leading coverage, and city-specific patient distributions.</p>
+                    <a href="https://www.linkedin.com/posts/jannat-bhengray_welcome-to-the-analysis-of-the-maven-hospital-activity-7219330777828708352-CFxO?utm_source=share&utm_medium=member_desktop" class="blog-button">Blog</a>
+                </div>
+            </div>
+            <div class="sparrow">
+                <img src="D:\main memory\Screenshots\Screenshot(420).png" alt="National Health Measure Analysis">
                 <div class="card-text">
                     <h3>National Health Measure Analysis</h3>
                     <p>Uncover the "National Health Measure Analysis Report," where NITI Aayog's data is processed with Pandas, Excel, and Power BI, revealing crucial gaps in budgeting and utilization across states. Receive targeted strategies for enhanced health planning based on these insights.</p>
                     <a href="https://www.linkedin.com/posts/jannat-bhengray_dataanalyst-nitiaayog-analysis-activity-7209535026110111744-16BB?utm_source=share&utm_medium=member_desktop" class="blog-button">Blog</a>
                 </div>
             </div>
-            <div class="col">
-                <img src="images/Screenshot(437).png" alt="Campaign Effectiveness Analysis">
+            <div class="sparrow">
+                <img src="D:\main memory\Screenshots\Screenshot(437).png" alt="Campaign Effectiveness Analysis">
                 <div class="card-text">
-                    <h3>All Video Games Analysis(1995-2023)</h3>
+                    <h3>All Video Games Analysis (1995-2023)</h3>
                     <p>Explore the "All Video Games Analysis (1990-2024)," revealing the most cherished gaming genre and the influential developer. Discover the impact of popular games on community engagement through significant user reviews.</p>
                     <a href="https://www.linkedin.com/posts/jannat-bhengray_video-game-dataset-analysis-report-objective-activity-7210890110957932545-CZu_?utm_source=share&utm_medium=member_desktop" class="blog-button">Blog</a>
                 </div>
@@ -286,7 +294,12 @@
         .projects h1 {
             text-align: center;
         }
-        .projects .col {
+        .jack {
+            display: flex;
+            flex-wrap: wrap;
+        }
+        .sparrow {
+            width: 32%; /* 3 items per row with some spacing */
             margin-bottom: 20px;
         }
         .card-text h3 {
@@ -301,35 +314,35 @@
         <h1>Skills</h1>
         <div class="jack">
             <div class="sparrow">
-                <img src="images/Screenshot(421).png">
+                <img src="D:\main memory\Screenshots\Screenshot(421).png">
                 <div class="intro">
                     <h3>Python</h3>
                     <p>Experienced in Python, specializing in data manipulation and analysis with Pandas. Skilled in cleaning, transforming, and visualizing datasets to extract actionable insights.</p>
                 </div>
             </div>
             <div class="sparrow">
-                <img src="images/Screenshot(422).png">
+                <img src="D:\main memory\Screenshots\Screenshot(422).png">
                 <div class="intro">
                     <h3>Data Visualization</h3>
                     <p>Skilled in data visualization using Power BI, creating dynamic and insightful dashboards. Experienced in utilizing custom DAX formulas and slicers to highlight key trends and insights.</p>
                 </div>
             </div>
             <div class="sparrow">
-                <img src="images/Screenshot(423).png">
+                <img src="D:\main memory\Screenshots\Screenshot(423).png">
                 <div class="intro">
                     <h3>SQL</h3>
                     <p>Proficient in SQL with a Silver badge on HackerRank. Skilled in querying databases, writing complex queries, and optimizing data retrieval.</p>
                 </div>
             </div>
             <div class="sparrow">
-                <img src="images/Screenshot(425).png">
+                <img src="D:\main memory\Screenshots\Screenshot(425).png">
                 <div class="intro">
                     <h3>Prompt Engineering</h3>
                     <p>Proficient in prompt engineering, crafting custom Excel formulas to boost efficiency and productivity. Skilled in optimizing workflows for streamlined operations.</p>
                 </div>
             </div>
             <div class="sparrow">
-                <img src="images/Screenshot(424).png">
+                <img src="D:\main memory\Screenshots\Screenshot(424).png">
                 <div class="intro">
                     <h3>Excel</h3>
                     <p>Excel forecasting expert, adept at predicting future trends with precision. Skilled in implementing models to drive strategic decision-making and boost productivity.</p>
@@ -361,19 +374,19 @@
         <div class="lily" style="display: flex; justify-content: center;">
             <div style="padding-right: 10px;">
                 <a href="https://www.linkedin.com/in/jannat-bhengray" target="_blank">
-                    <img src="images/Screenshot(442).png" alt="LinkedIn" class="social-icon">
+                    <img src="D:\main memory\Screenshots\Screenshot(442).png" alt="LinkedIn" class="social-icon">
                     <p style="color: rgb(233, 236, 239); font-size: large; text-align: center;">Click here for LinkedIn</p>
                 </a>
             </div>
             <div style="padding-right: 10px; padding-left: 10px;">
                 <a href="https://x.com/JBhengray79407?t=97cFEg-JfSYg5Po_gp8xkg&s=09" target="_blank">
-                    <img src="images/Screenshot(438).png" alt="Twitter" class="social-icon">
+                    <img src="D:\main memory\Screenshots\Screenshot(438).png" alt="Twitter" class="social-icon">
                     <p style="color: rgb(233, 236, 239); font-size: large; text-align: center;">Click here for Twitter</p>
                 </a>
             </div>
             <div style="padding-left: 10px;">
                 <a href="https://github.com/Jannat-Bhengray/Analytical-Project/pulse" target="_blank">
-                    <img src="images/Screenshot(426).png" alt="GitHub" class="social-icon">
+                    <img src="D:\main memory\Screenshots\Screenshot(426).png" alt="GitHub" class="social-icon">
                     <p style="color: rgb(233, 236, 239); font-size: large; text-align: center;">Click here for GitHub</p>
                 </a>
             </div>
